sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: ')' expected but ',' found.
      if(!isSmallerThan(getValue(i+k)),v){
                                      ^AlgInsertionSort:17: error: illegal start of simple expression
    }
    ^