sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var i=0
  var v=0
  var k=0
  var h=0
  var g=0
  var l=getValueCount()
  for (i<-1 to l-1){
    v=getValue(i)
    while(h==0){
      if(!isSmallerThan(getValue(i+k)),v){
        copy(i+k,i)
        setValue(i+k,v)
      }
      else{k=k-1}
    }
  }
}